opam-version: "2.0"
maintainer: "Vladimir Brankov <vbrankov@janestreet.com>"
authors: "Vladimir Brankov <vbrankov@janestreet.com>"
homepage: "https://github.com/vbrankov/hdf5-ocaml"
bug-reports: "https://github.com/vbrankov/hdf5-ocaml/issues"
license: "MIT"
dev-repo: "git+https://github.com/vbrankov/hdf5-ocaml.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "cppo"
  "dune" {build & >= "1.1.0"}
  "ocaml" {>= "4.04"}
  "ppx_inline_test"
  "ppxlib"
  "stdio"
]
depexts: [
  ["hdf5"] {os-distribution = "alpine"}
  ["epel-release" "hdf5-devel"] {os-distribution = "centos"}
  ["libhdf5-dev"] {os-distribution = "debian"}
  ["hdf5"] {os-distribution = "homebrew"}
  ["libhdf5-dev"] {os-distribution = "ubuntu"}
]
synopsis: "Manages HDF5 files used for storing large amounts of data"
description: "The library manages reading and writing to HDF5 files. HDF5 file
format is used for storing and organizing large amounts of data. Also provided
is a fast way of working with large arrays of records, much faster than OCaml
arrays of records."
