(library
   (name hdf5_caml)
   (public_name hdf5_caml)
   (libraries bigarray hdf5_raw))

(rule
 (targets h5.ml)
 (deps    (:first-dep h5.cppo.ml)) 
 (action  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{first-dep} -o %{targets})))

(rule
 (targets struct.ml)
 (deps    (:first-dep struct.cppo.ml))
 (action  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{first-dep} -o %{targets})))
