(library
 (name hdf5_caml)
 (public_name hdf5-ocaml.caml)
 (c_names struct_stubs)
 (libraries bigarray hdf5_raw)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))

(rule
 (targets h5.ml)
 (deps    (:first-dep h5.cppo.ml)) 
 (action  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{first-dep} -o %{targets})))

(rule
 (targets struct.ml)
 (deps    (:first-dep struct.cppo.ml))
 (action  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{first-dep} -o %{targets})))
