(rule
 (targets ppx_h5struct.ml)
 (deps    (:first-dep ppx_h5struct.cppo.ml))
 (action  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{first-dep} -o %{targets})))
 
(library
   (name ppx_h5struct)
   (public_name ppx_h5struct)
   (preprocess (pps ppx_tools_versioned.metaquot_406))
   (kind ppx_rewriter) 
   (libraries ppx_tools_versioned 
      ppx_tools_versioned.metaquot_406 
      ocaml-migrate-parsetree))
 
