(library
 (name hdf5_raw)
 (public_name hdf5-ocaml.raw)
 (c_names
  h5a_stubs
  h5d_stubs
  h5f_stubs
  h5g_stubs
  h5i_stubs
  h5l_stubs
  h5lt_stubs
  h5o_stubs
  h5p_stubs
  h5r_stubs
  h5s_stubs
  h5_stubs
  h5tb_stubs
  h5t_stubs
  h5z_stubs
  hid_stubs)
 (c_flags (:include c_flags.sexp))
 (c_library_flags (:include c_library_flags.sexp))
 (libraries bigarray))

(rule
 (targets h5_raw.ml)
 (deps    (:first-dep h5_raw.cppo.ml))
 (action  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{first-dep} -o %{targets})))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
